src/components/hotel-photos/hotelPhotos.css
#mainPic {
  max-width: 50%;
  outline: 3px solid #000;
}
#picsBar {
  max-width: 70%;
  margin: 20px auto;
  overflow-x: auto;
  display: flex;
  height: 136px;
}
#picsBar img {
  max-height: 100px;
  margin: 10px;
  border: 2px solid #000;
}
#picsBar img:first-child {
  margin-left: 3 !important;
}
#picsBar img:last-child {
  margin-right: 3 !important;
}
#picsBar img.active {
  outline: 4px solid #ffcc00;
  outline-offset: -14px;
}
#picsBar::-webkit-scrollbar {
  height: 15px;
}
#picsBar::-webkit-scrollbar-thumb {
  border-radius: 7px;
  background: #406DAC;
}
#picsBar::-webkit-scrollbar-track {
  background: #fff;
  border: 2px solid #406DAC;
  border-radius: 7px;
}

.buffer {
  opacity: 0.3;
}

